# MoodNest

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SETUP.md  manage.py  pyproject.toml  pytest.ini
habits/: admin.py  models.py  urls.py  utils.py  views.py
habits/management/commands/: seed_habits.py
habits/migrations/: 0001_initial.py  0002_usermoodlog.py
moodnest_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/habits/: history.html  home.html  result.html
templates/registration/: login.html  signup.html
templates/users/: profile.html
tests/: test_models.py  test_views.py
