[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-mood-tracker"
version = "0.1.0"
description = "A reusable Django app for mood tracking and mini-habit generation."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=4.2",
]

[project.urls]
Homepage = "https://github.com/Ananyaaa-K/MoodNest"
